--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,7 +48,7 @@ jobs:
           ls -la ~/.android/debug.keystore
       
       - name: Upload APK
-        uses: actions/upload-artifact@v3  # 更新版本
+        uses: actions/upload-artifact@v4  # 更新到非弃用版本v4
         with:
           name: my-build-apk
-          path: app/build/outputs/apk/debug/*.apk  # 精确指定路径
+          path: app/build/outputs/apk/debug/*.apk
