--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,57 +8,39 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v3  # 更新到最新版本
+        uses: actions/checkout@v3
         with:
-          fetch-depth: 1  # 简化克隆深度设置
-      
+          fetch-depth: 1 
       - name: Set up JDK
-        uses: actions/setup-java@v3  # 更新到最新版本
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'  # 明确指定JDK发行版
-          java-version: 17  # 升级到最新稳定版JDK17
-      
+          distribution: 'temurin'
+          java-version: 17
       - name: Get project name
         id: get-project
         run: |
           PROJECT=$(cat project-to-build)
-          echo "project=$PROJECT" >> $GITHUB_OUTPUT  # 使用新式输出方式
-      
+          echo "project=$PROJECT" >> $GITHUB_OUTPUT
       - name: Clone project
         run: git clone --depth=1 ${{ steps.get-project.outputs.project }} project
-      
       - name: Setup Gradle cache
         uses: actions/cache@v3  # 新增缓存步骤
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle-
-      
       - name: Build the app
         working-directory: ./project
         run: |
           ./gradlew --no-daemon assembleDebug --stacktrace
-        
       - name: Extract APK Path
         working-directory: ./project
         run: |
-          # 从工作目录根目录开始全局搜索APK文件
           APK_PATH=$(find . -name "*.apk" | head -n 1)
           echo "APK path is: $APK_PATH"
           echo "APK_PATH=$APK_PATH" >> $GITHUB_ENV
-        
-      - name: Verify APK Signing
-        working-directory: ./project
-        run: |
-          # 验证APK是否包含默认debug签名（使用动态路径）
-          unzip -l "$APK_PATH" | grep -i 'META-INF'
-          
-          # 检查debug.keystore是否存在
-          ls -la ~/.android/debug.keystore
-      
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: my-build-apk
-          # 使用动态提取的APK路径
           path: ${{ env.APK_PATH }}
