--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -43,12 +43,13 @@ jobs:
         id: extract_apk
         working-directory: ./project
         run: |
-          APK_PATH=$(find . -name "*.apk")
-          # 使用环境文件方式替代直接写入GITHUB_ENV
-          echo "APK_PATH=$APK_PATH" > $GITHUB_ENV
-          # 使用临时文件处理JSON转换
-          echo "$APK_PATH" | jq -R -s -c 'split("\n")[:-1]' | tee apk_paths.json
+          # 使用 find 的 -print0 配合 xargs 处理带空格路径
+          APK_PATHS=$(find . -name "*.apk" -print0 | xargs -0)
+          # 确保路径按换行分割并正确转义
+          echo "$APK_PATHS" | jq -R -s -c 'split("\u0000")[:-1] | map(select(length > 0))' > apk_paths.json
           echo "apk_paths=$(cat apk_paths.json)" >> $GITHUB_OUTPUT
+          # 只保留第一个APK路径用于兼容旧流程
+          echo "APK_PATH=$(echo "$APK_PATHS" | head -n1)" >> $GITHUB_ENV
 
   upload_apk:
     needs: build
@@ -66,5 +67,4 @@ jobs:
         if: matrix.apk != ''
         uses: actions/upload-artifact@v4
         with:
-          name: my-build-apk-${{ matrix.apk }}
-          path: ${{ matrix.apk }}
+          name: my-build-apk-${{ 
