--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -46,7 +46,7 @@ jobs:
           # 使用 find 的 -print0 配合 xargs 处理带空格路径
           APK_PATHS=$(find . -name "*.apk" -print0 | xargs -0)
           # 确保路径按换行分割并正确转义
-          echo "$APK_PATHS" | jq -R -s -c 'split("\u0000")[:-1] | map(select(length > 0))' > apk_paths.json
+          echo "$APK_PATHS" | jq -R -s -c 'split("\u0000")[:-1] | map(select(length > 0)) | map(gsub("\\$"; "$$"))' > apk_paths.json
           echo "apk_paths=$(cat apk_paths.json)" >> $GITHUB_OUTPUT
           # 只保留第一个APK路径用于兼容旧流程
           echo "APK_PATH=$(echo "$APK_PATHS" | head -n1)" >> $GITHUB_ENV
@@ -67,5 +67,5 @@ jobs:
         if: matrix.apk != ''
         uses: actions/upload-artifact@v4
         with:
-          name: my-build-apk-${{ matrix.apk }}
-          path: ${{ matrix.apk }}
+          name: my-build-apk-${{ replace(matrix.apk, '$', '$$') }}
+          path: ${{ replace(matrix.apk, '$', '$$') }}
