--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -8,27 +8,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v3  # 更新到最新版本
+        uses: actions/checkout@v3
         with:
-          fetch-depth: 1  # 简化克隆深度设置
+          fetch-depth: 1
       
       - name: Set up JDK
-        uses: actions/setup-java@v3  # 更新到最新版本
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'  # 明确指定JDK发行版
-          java-version: 17  # 升级到最新稳定版JDK17
+          distribution: 'temurin'
+          java-version: 17
       
       - name: Get project name
         id: get-project
         run: |
           PROJECT=$(cat project-to-build)
-          echo "project=$PROJECT" >> $GITHUB_OUTPUT  # 使用新式输出方式
+          echo "project=$PROJECT" >> $GITHUB_OUTPUT
       
       - name: Clone project
         run: git clone --depth=1 ${{ steps.get-project.outputs.project }} project
       
       - name: Setup Gradle cache
-        uses: actions/cache@v3  # 新增缓存步骤
+        uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
@@ -38,7 +38,7 @@ jobs:
         working-directory: ./project
         run: |
           ./gradlew --no-daemon assembleDebug --stacktrace
-        
+      
       - name: Extract APK Path
         id: extract_apk
         working-directory: ./project
@@ -49,9 +49,9 @@ jobs:
           if [ -z "$APK_PATHS" ]; then
             echo "apk_paths=[]" >> $GITHUB_OUTPUT
           else
-            # 确保路径按换行分割并正确转义
-            echo "$APK_PATHS" | jq -R -s -c 'split("\u0000")[:-1] | map(select(length > 0)) | map(gsub("\\$"; "$$"))' > apk_paths.json
-            echo "apk_paths=$(cat apk_paths.json)" >> $GITHUB_OUTPUT
+            # 直接生成JSON数组避免临时文件
+            JSON_ARRAY=$(echo "$APK_PATHS" | jq -R -s -c 'split("\u0000")[:-1] | map(select(length > 0)) | map(gsub("\\$"; "$$"))')
+            echo "apk_paths=$JSON_ARRAY" >> $GITHUB_OUTPUT
           fi
           # 只保留第一个APK路径用于兼容旧流程
           echo "APK_PATH=$(echo "$APK_PATHS" | head -n1)" >> $GITHUB_ENV
