--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -39,32 +39,22 @@ jobs:
         run: |
           ./gradlew --no-daemon assembleDebug --stacktrace
       
-      - name: Extract APK Path
-        id: extract_apk
-        working-directory: ./project
+      - name: Find APK files
+        id: find-apk
         run: |
-          # 使用 find 的 -print0 配合 xargs 处理带空格路径
-          APK_PATHS=$(find . -name "*.apk" -print0 | xargs -0)
-          # 新增空值保护：当未找到APK时生成空数组
-          if [ -z "$APK_PATHS" ]; then
-            # 删除原空数组输出，改用单元素数组占位符
-            echo "apk_paths=[\"\"]" >> $GITHUB_OUTPUT
-            # 增加占位符确保矩阵非空，保留第一个元素兼容旧流程
-            echo "APK_PATH=" >> $GITHUB_ENV
+          APK_FILES=($(find . -type f -name "*.apk" | sort -r | head -n 2))
+          if [ ${#APK_FILES[@]} -eq 0 ]; then
+            echo "apk_paths=" >> $GITHUB_OUTPUT
           else
-            # 直接生成JSON数组避免临时文件
-            JSON_ARRAY=$(echo "$APK_PATHS" | jq -R -s -c 'split("\u0000")[:-1] | map(select(length > 0)) | map(gsub("\\$"; "$$"))')
-            echo "apk_paths=$JSON_ARRAY" >> $GITHUB_OUTPUT
+            echo "apk_paths=$(printf "%s\n" "${APK_FILES[@]}" )" >> $GITHUB_OUTPUT
           fi
-          # 只保留第一个APK路径用于兼容旧流程
-          echo "APK_PATH=$(echo "$APK_PATHS" | head -n1)" >> $GITHUB_ENV
 
   upload_apk:
     needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        apk: ${{ fromJSON(needs.build.outputs.apk_paths || '[]') }}
+        apk: ${{ split(needs.build.outputs.apk_paths, '\n') }}
     steps:
       - name: Download Artifact
         uses: actions/download-artifact@v4
