--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -46,14 +46,13 @@ jobs:
           if [ ${#APK_FILES[@]} -eq 0 ]; then
             echo "apk_paths=" >> $GITHUB_OUTPUT
           else
-            # 使用双引号包裹每个路径以处理特殊字符
-            echo "apk_paths=$(printf '\"%s\"\n' "${APK_FILES[@]}")" >> $GITHUB_OUTPUT
+            # 使用空格分隔并用双引号包裹整个路径列表
+            echo "apk_paths=\"$(printf '%s ' "${APK_FILES[@]}")\"" >> $GITHUB_OUTPUT
           fi
 
       - name: Upload APK
-        if: matrix.apk != ''
+        if: ${{ steps.find-apk.outputs.apk_paths != '' }}
         uses: actions/upload-artifact@v4
         with:
-          name: my-build-apk-${{ matrix.apk }}
-          # 添加双引号包裹路径并转义特殊字符
-          path: "$(echo ${{ matrix.apk }} | sed 's/[+.]/\\&/g')"
+          name: my-build-apk
+          path: ${{ steps.find-apk.outputs.apk_paths }}
