--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          path: ./**/*.apk
+          path: project/**/*.apk
