--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          path: $APK_DIR/*.apk
+          path: $APK_DIR
