--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -33,17 +33,16 @@ jobs:
         working-directory: ./project
         run: |
           ./gradlew --no-daemon assembleDebug --stacktrace
-      - name: Move APK to temporary directory
+      - name: Get APK file paths
         run: |
-          temp_dir=$(mktemp -d)
-          find project -type f -name "*.apk" -exec mv {} "$temp_dir" \;
-          # 获取两个APK路径并导出为环境变量
-          readarray -t apks < <(ls "$temp_dir"/*.apk | head -n 2)
+          # 查找构建输出的APK文件（通常在app/build/outputs/apk/目录下）
+          apks=($(find project -type f -name "*.apk" | head -n 2))
+          # 直接导出原始构建路径
           echo "APK1_PATH=${apks[0]}" >> $GITHUB_ENV
           echo "APK2_PATH=${apks[1]}" >> $GITHUB_ENV
-          # 输出日志调试信息
-          echo "APK1_PATH: ${{ env.APK1_PATH }}"
-          echo "APK2_PATH: ${{ env.APK2_PATH }}"
+          # 输出原始文件名调试信息
+          echo "APK1 Original Name: ${apks[0]##*/}"
+          echo "APK2 Original Name: ${apks[1]##*/}"
 
       - name: Upload First APK
         if: ${{ env.APK1_PATH != null && env.APK1_PATH != '' }}
