--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -49,11 +49,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: ${{ env.APK1_PATH }}
-          name: "${apks[0]##*/}"
+          name: ${apks[0]}
 
       - name: Upload Second APK
         if: ${{ env.APK2_PATH != null && env.APK2_PATH != '' }}
         uses: actions/upload-artifact@v4
         with:
           path: ${{ env.APK2_PATH }}
-          name: "${apks[1]##*/}"
+          name: ${apks[1]}
