--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Clone project
         run: git clone --depth=1 ${{ steps.get-project.outputs.project }} project
       - name: Setup Gradle cache
-        uses: actions/cache@v3  # 新增缓存步骤
+        uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
@@ -33,8 +33,27 @@ jobs:
         working-directory: ./project
         run: |
           ./gradlew --no-daemon assembleDebug --stacktrace
-      - name: Upload APK
+      - name: Get APK file paths
+        run: |
+          apks=($(find project -type f -name "*.apk" | head -n 2))
+          echo "APK1_PATH=${apks[0]}" >> $GITHUB_ENV
+          echo "APK2_PATH=${apks[1]}" >> $GITHUB_ENV
+          # 新增原始文件名环境变量
+          echo "APK1_NAME=${apks[0]##*/}" >> $GITHUB_ENV
+          echo "APK2_NAME=${apks[1]##*/}" >> $GITHUB_ENV
+
+      - name: Upload First APK
+        if: ${{ env.APK1_PATH != null && env.APK1_PATH != '' }}
         uses: actions/upload-artifact@v4
         with:
-          name: my-build-apk
-          path: ./**/*.apk
+          path: ${{ env.APK1_PATH }}
+          # 使用原始文件名作为上传名称
+          name: ${{ env.APK1_NAME }}
+
+      - name: Upload Second APK
+        if: ${{ env.APK2_PATH != null && env.APK2_PATH != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          path: ${{ env.APK2_PATH }}
+          # 使用原始文件名作为上传名称
+          name: ${{ env.APK2_NAME }}
