--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -44,8 +44,8 @@ jobs:
           fi
 
           if [ "$REMOTE_HASH" = "$PREVIOUS_HASH" ]; then
-            echo "No new commits since last check. Exiting workflow."
-            exit 0
+            echo "No new commits since last check. Skipping workflow."
+            echo "SKIP_BUILD=1" >> $GITHUB_ENV  # 新增：设置跳过标记
           else
             echo "New commit detected. Proceeding with build."
             echo "$REMOTE_HASH" > previous_hash.txt
@@ -57,9 +57,11 @@ jobs:
           path: previous_hash.txt
           key: ${{ steps.get-project.outputs.project }}-hash
           restore-keys: ''
+        if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
 
       - name: Clone project
         run: git clone --depth=1 ${{ steps.get-project.outputs.project }} project
+        if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
 
       - name: Setup Gradle cache
         uses: actions/cache@v3
@@ -67,11 +69,13 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle-
+        if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
 
       - name: Build the app
         working-directory: ./project
         run: |
           ./gradlew --no-daemon assembleDebug --stacktrace
+        if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
 
       - name: Get APK file paths
         run: |
@@ -94,8 +98,3 @@ jobs:
         with:
           path: ${{ env.APK2_PATH }}
           name: ${{ env.APK2_NAME }}
-
-      - name: Clean up workspace
-        run: |
-          rm -rf project/
-          rm -f previous_hash.txt
