--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,4 +1,4 @@
-name: build
+name: android_build
 
 on:
   schedule:
@@ -85,16 +85,37 @@ jobs:
           echo "APK1_NAME=${apks[0]##*/}" >> $GITHUB_ENV
           echo "APK2_NAME=${apks[1]##*/}" >> $GITHUB_ENV
 
-      - name: Upload First APK
-        if: ${{ env.APK1_PATH != null && env.APK1_PATH != '' }}
-        uses: actions/upload-artifact@v4
+      - name: Create GitHub Release
+        if: ${{ !env.SKIP_BUILD }}
+        uses: ncipollo/create-release@v2
         with:
-          path: ${{ env.APK1_PATH }}
-          name: ${{ env.APK1_NAME }}
+          tag: ${{ steps.get-remote-hash.outputs.REMOTE_HASH }}
+          name: ${{ format('Build {0}', steps.get-remote-hash.outputs.REMOTE_HASH) }}
+          body: |
+            ${{ format('自动构建发布 - 提交哈希: {0}', steps.get-remote-hash.outputs.REMOTE_HASH) }}
+            
+            提取自远程仓库的最新提交信息:
+            $(git log -1 --pretty=%B ${{ steps.get-remote-hash.outputs.REMOTE_HASH }})
+          draft: false
+          prerelease: false
+          files: |
+            ${{ env.APK1_PATH }}
+            ${{ env.APK2_PATH }}
 
-      - name: Upload Second APK
-        if: ${{ env.APK2_PATH != null && env.APK2_PATH != '' }}
+      - name: Prepare upload paths
+        run: |
+          paths=()
+          if [ -n "$APK1_PATH" ]; then
+            paths+=("$APK1_PATH")
+          fi
+          if [ -n "$APK2_PATH" ]; then
+            paths+=("$APK2_PATH")
+          fi
+          echo "UPLOAD_PATHS=$(printf "%s\n" "${paths[@]}")" >> $GITHUB_ENV
+
+      - name: Upload APKs
+        if: ${{ env.UPLOAD_PATHS != null && env.UPLOAD_PATHS != '' }}
         uses: actions/upload-artifact@v4
         with:
-          path: ${{ env.APK2_PATH }}
-          name: ${{ env.APK2_NAME }}
+          path: ${{ env.UPLOAD_PATHS }}
+          name: ${{ format('Build_{0}', steps.get-remote-hash.outputs.REMOTE_HASH) }}
