--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -89,7 +89,7 @@ jobs:
         # 新增peter-evans/create-release@v3实现相同功能
       - name: Create GitHub Release
         if: ${{ !env.SKIP_BUILD }}
-        uses: peter-evans/create-github-release@v1
+        uses: peter-evans/github-release@v1  # 修改动作名称为peter-evans/github-release
         with:
           tag-name: ${{ steps.get-remote-hash.outputs.REMOTE_HASH }}
           release-name: ${{ format('Build {0}', steps.get-remote-hash.outputs.REMOTE_HASH) }}
@@ -100,7 +100,7 @@ jobs:
             $(git log -1 --pretty=%B ${{ steps.get-remote-hash.outputs.REMOTE_HASH }})
           draft: false
           prerelease: false
-          asset-paths: |  # 修正参数名称（v1版本使用asset-paths）
+          assets-path: |  # 参数名称调整为assets-path（注意复数形式）
             ${{ env.APK1_PATH }}
             ${{ env.APK2_PATH }}
 
