--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -51,6 +51,16 @@ jobs:
             echo "$REMOTE_HASH" > previous_hash.txt
           fi
 
+      - name: Create and push tag for release
+        #if: ${{ !env.SKIP_BUILD }}
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@users.noreply.github.com"
+          git tag -a ${{ steps.get-remote-hash.outputs.REMOTE_HASH }} -m "Release tag"
+          git push origin ${{ steps.get-remote-hash.outputs.REMOTE_HASH }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Save current hash to cache
         uses: actions/cache@v3
         with:
@@ -85,6 +95,8 @@ jobs:
           echo "APK1_NAME=${apks[0]##*/}" >> $GITHUB_ENV
           echo "APK2_NAME=${apks[1]##*/}" >> $GITHUB_ENV
 
+        # 替换废弃的GitHub Release动作
+        # 新增peter-evans/create-release@v3实现相同功能
       - name: Create GitHub Release
         #if: ${{ !env.SKIP_BUILD }}
         uses: softprops/action-gh-release@v2
