--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Create and push tag for release
         #if: ${{ !env.SKIP_BUILD }}
         run: |
+          cd project
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git tag -a ${{ steps.get-remote-hash.outputs.REMOTE_HASH }} -m "Release tag"
