--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,4 +1,4 @@
-name: android_build
+name: build
 
 on:
   schedule:
@@ -8,6 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      # 新增全局环境变量定义
+      PROJECT_REPO: https://github.com/Fansirsqi/Sesame-TK  # 项目仓库地址变量
+
     steps:
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -17,7 +21,8 @@ jobs:
 
       - name: Create project-to-build file
         run: |
-          echo "https://github.com/Fansirsqi/Sesame-TK" > project-to-build
+          # 使用环境变量写入文件
+          echo "$PROJECT_REPO" > project-to-build
 
       - name: Get project name
         id: get-project
@@ -51,28 +56,17 @@ jobs:
             echo "$REMOTE_HASH" > previous_hash.txt
           fi
 
-      - name: Create and push tag for release
-        #if: ${{ !env.SKIP_BUILD }}
-        run: |
-          cd project
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git tag -a ${{ steps.get-remote-hash.outputs.REMOTE_HASH }} -m "Release tag"
-          git push origin ${{ steps.get-remote-hash.outputs.REMOTE_HASH }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Save current hash to cache
         uses: actions/cache@v3
         with:
           path: previous_hash.txt
           key: ${{ steps.get-project.outputs.project }}-hash
           restore-keys: ''
-        #if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
+        if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
 
       - name: Clone project
         run: git clone --depth=1 ${{ steps.get-project.outputs.project }} project
-        #if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
+        if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
 
       - name: Setup Gradle cache
         uses: actions/cache@v3
@@ -80,13 +74,13 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle-
-        #if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
+        if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
 
       - name: Build the app
         working-directory: ./project
         run: |
           ./gradlew --no-daemon assembleDebug --stacktrace
-        #if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
+        if: ${{ !env.SKIP_BUILD }}  # 新增：仅当未跳过时执行
 
       - name: Get APK file paths
         run: |
@@ -96,38 +90,48 @@ jobs:
           echo "APK1_NAME=${apks[0]##*/}" >> $GITHUB_ENV
           echo "APK2_NAME=${apks[1]##*/}" >> $GITHUB_ENV
 
-        # 替换废弃的GitHub Release动作
-        # 新增peter-evans/create-release@v3实现相同功能
-      - name: Create GitHub Release
-        #if: ${{ !env.SKIP_BUILD }}
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ steps.get-remote-hash.outputs.REMOTE_HASH }}
-          name: ${{ format('Build {0}', steps.get-remote-hash.outputs.REMOTE_HASH) }}
-          body: |
-            ${{ format('自动构建发布 - 提交哈希: {0}', steps.get-remote-hash.outputs.REMOTE_HASH) }}
-            
-            提取自远程仓库的最新提交信息:
-            $(git log -1 --pretty=%B ${{ steps.get-remote-hash.outputs.REMOTE_HASH }})
-          files: |
-            ${{ env.APK1_PATH }}
-            ${{ env.APK2_PATH }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Prepare upload paths
-        run: |
-          paths=()
-          if [ -n "$APK1_PATH" ]; then
-            paths+=("$APK1_PATH")
-          fi
-          if [ -n "$APK2_PATH" ]; then
-            paths+=("$APK2_PATH")
-          fi
-          echo "UPLOAD_PATHS=$(printf "%s\n" "${paths[@]}")" >> $GITHUB_ENV
-
-      - name: Upload APKs
-        if: ${{ env.UPLOAD_PATHS != null && env.UPLOAD_PATHS != '' }}
+      - name: Upload First APK
+        if: ${{ env.APK1_PATH != null && env.APK1_PATH != '' }}
         uses: actions/upload-artifact@v4
         with:
-          path: ${{ env.UPLOAD_PATHS }}
-          name: ${{ format('Build_{0}', steps.get-remote-hash.outputs.REMOTE_HASH) }}
+          path: ${{ env.APK1_PATH }}
+          name: ${{ env.APK1_NAME }}
+
+      - name: Upload Second APK
+        if: ${{ env.APK2_PATH != null && env.APK2_PATH != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          path: ${{ env.APK2_PATH }}
+          name: ${{ env.APK2_NAME }}
+
+      - name: Get remote repository info
+        if: ${{ !env.SKIP_BUILD }}
+        run: |
+          # 使用环境变量动态构造API地址
+          PROJECT_PATH=$(echo "$PROJECT_REPO" | sed 's/.*github.com\/\(.*\)/\1/')
+          API_URL="https://api.github.com/repos/$PROJECT_PATH"
+          
+          # 安装 jq 用于解析 JSON
+          sudo apt-get update
+          sudo apt-get install -y jq
+
+          # 使用动态构造的API地址
+          REPO_INFO=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "$API_URL")
+          
+          LATEST_TAG=$(echo "$REPO_INFO" | jq -r '.default_branch')
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          DESCRIPTION=$(echo "$REPO_INFO" | jq -r '.description')
+
+          echo "RELEASE_TAG=$LATEST_TAG" >> $GITHUB_ENV
+          echo "RELEASE_NAME=Build for $LATEST_TAG" >> $GITHUB_ENV
+          echo "RELEASE_BODY=$COMMIT_MSG\n\n$DESCRIPTION" >> $GITHUB_ENV
+
+      - name: Create Release
+        if: ${{ !env.SKIP_BUILD }}
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ env.RELEASE_TAG }}
+          release_name: ${{ env.RELEASE_NAME }}
+          body: ${{ env.RELEASE_BODY }}
+          draft: false
+          prerelease: false
