--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -130,7 +130,7 @@ jobs:
           echo "RELEASE_BODY=$COMMIT_MSG\n\n$DESCRIPTION" >> $GITHUB_ENV
 
       - name: Create Release
-        #if: ${{ !env.SKIP_BUILD }}  # 恢复条件判断（取消注释）
+        if: ${{ !env.SKIP_BUILD }}  # 恢复条件判断（取消注释）
         uses: actions/create-release@v1
         with:
           tag_name: ${{ env.RELEASE_TAG }}
@@ -138,4 +138,4 @@ jobs:
           body: ${{ env.RELEASE_BODY }}
           draft: false
           prerelease: false
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}  # 使用正确的参数名(token而非github-token})
